added option to snapshot with id & balance

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-    "address": "0x888F98EfcFfB7822e6EEbd249262853DB960deAD",
-    "block": ""
+    "address": "0x6a46B8591679f53AE1AEd3Bae673F4D2208f7177",
+    "block": "",
+    "withBalances": false
 }
