--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "address": "0x6a46B8591679f53AE1AEd3Bae673F4D2208f7177",
+    "address": "0x888F98EfcFfB7822e6EEbd249262853DB960deAD",
     "block": "",
-    "withBalances": false
+    "withBalances": true
 }
